[gd_scene load_steps=4 format=3 uid="uid://cawux7qlilo2t"]

[ext_resource type="Script" path="res://power_ups/attacks/beam/lightning_bolt/lightning_bolt_beam.gd" id="1_au4fq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hegy5"]
height = 232.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xq0k4"]

[node name="lightning_bolt_beam" type="Area2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_au4fq")

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -116)
shape = SubResource("CapsuleShape2D_hegy5")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -116)
scale = Vector2(18, 226)
texture = SubResource("PlaceholderTexture2D_xq0k4")

[node name="anim_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="anim_timer" to="." method="_on_anim_timer_timeout"]
